# dav1d

./: .gitignore  CMakeLists.txt
cmake/: config.asm.in  config.h.in  dav1dConfig.cmake.in
